--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "filesize": "3.3.0",
     "lodash.partialright": "4.1.3",
     "mkdirp": "0.5.1",
-    "nightmare": "2.2.0",
-    "promise-sequences": "0.0.2",
-    "request": "2.69.0",
-    "unzip-wrapper": "^0.1.5"
+    "nightmare": "2.10.0",
+    "nightmare-download-manager": "0.2.4",
+    "promise-sequences": "0.0.3",
+    "sanitize-filename": "1.6.1"
   },
   "devDependencies": {},
   "scripts": {},
