(feat) use an npm bin script and add search, debug and open bandcamp site options.

--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "bandcamp-dl": "./bin/bandcamp-dl.js"
+  },
   "dependencies": {
     "filesize": "3.3.0",
     "lodash.partialright": "4.1.3",
     "mkdirp": "0.5.1",
     "nightmare": "2.10.0",
     "nightmare-download-manager": "0.2.4",
+    "opener": "1.4.3",
     "promise-sequences": "0.0.3",
     "sanitize-filename": "1.6.1"
   },
